# audio-player

./: .env  .eslintrc.json  .gitignore  next.conf.mjs  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json
.next/: trace
.next/cache/webpack/server-development/: 0.pack.gz_  index.pack.gz_
.next/server/: server-reference-manifest.json
src-tauri/: .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2024-10-05-042358_create_songs/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: format_handler.rs  mod.rs  playback.rs
src-tauri/src/database/: database_connection.rs  mod.rs  models.rs  schema.rs
src-tauri/src/file_system/: mod.rs
src-tauri/src/metadata/: mod.rs
src-tauri/src/playlist/: mod.rs
src/app/: layout.tsx  page.tsx
src/app/api/log/: route.ts
src/app/types/: SongsData.ts
src/components/: library-view.tsx  music-player.tsx
