[package]
name = "audio-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "audio_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "audio-player"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.19.0"
log = "0.4.22"
env_logger = "0.11.5"
base64 = "0.22.1"
id3 = "1.14.0"
metaflac = "0.2.7"

